[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "trace_cologne"
version = "0.9"
authors = [
  { name="Luis Bonah", email="bonah@ph1.uni-koeln.de" },
]
description = "TRACE (Tool for Remotely Accessing and Controlling Experiments) allows to control simple absorption experiments"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ['numpy', 'pandas', 'matplotlib', 'wrapt', 'pyckett', 'scipy', 'PyQt6', 'pyvisa', 'websockets', 'websocket-client', 'zhinst', 'pyserial']
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Operating System :: OS Independent",
]
keywords = ["Experiment", "Absorptions", "Spectroscopy"]

[project.scripts]
trace = "traces:start"
trace_gui = "traces.mod_gui:start"
trace_exp = "traces.mod_experiment:start"